--- a/View/login.html
+++ b/View/login.html
@@ -6,17 +6,15 @@
     <title>Login</title>
 </head>
 <body>
-    <form>
+    <form method="">
         <center>
             <h2>Test Login</h2>
             Usuario
-            <input type="text" name="u" required>
-            <br>
-            <br>
+            <input type="text" name="u" required><br><br>
             Contraseña
-            <input type="password" name="c" required>
-            <br>
-            <input type="submit" value="Login"> 
+            <input type="password" name="c" required><br><br>
+            <input type="submit" value="Login"><br>
+            <p><a href="Registro.html">¿Olvidaste tu contraseña?</a></p> 
         </center>
     </form>
 </body>
