--- a/View/Registro.html
+++ b/View/Registro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="../CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Special+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
     <form method="post" class="form-registro">
