--- a/View/login.html
+++ b/View/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="../CSS/style.css"
 </head>
 <body>
-    <form method="">
+    <form method="post" class="form-login">
         <center>
             <h2>Test Login</h2>
             Usuario
