--- a/View/login.html
+++ b/View/login.html
@@ -11,9 +11,9 @@
         <center>
             <h2>Test Login</h2>
             Usuario
-            <input type="text" name="u" required><br><br>
+            <input type="text" name="u" placeholder="Pon tu usuario o correo" required><br><br>
             Contraseña
-            <input type="password" name="c" required><br><br>
+            <input type="password" name="c" placeholder="Ingresa tu contraseña" required><br><br>
             <input type="submit" value="Login"><br>
             <p><a href="Registro.html">¿Olvidaste tu contraseña?</a></p> 
         </center>
