--- a/View/index.html
+++ b/View/index.html
@@ -20,7 +20,7 @@
       <img src="https://www.svgrepo.com/show/379005/event.svg" alt="Eventos" class="landing-illustration" />
       <div class="landing-buttons" id="auth-buttons">
         <a href="login.html" class="btn btn-primary">Iniciar Sesión</a>
-        <a href="register.html" class="btn btn-secondary">Registrarse</a>
+        <a href="Registro.html" class="btn btn-secondary">Registrarse</a>
       </div>
       <div class="landing-buttons" id="logout-button" style="display: none;">
         <button class="btn btn-secondary" onclick="logout()">Cerrar sesión</button>
