--- a/View/login.html
+++ b/View/login.html
@@ -15,7 +15,7 @@
             Contraseña
             <input type="password" name="c" placeholder="Ingresa tu contraseña" required><br><br>
             <input type="submit" value="Login"><br>
-            <p><a href="Registro.html">¿Olvidaste tu contraseña?</a></p> 
+            <p><a href="Registro.html">Registrate ahora</a></p> 
         </center>
     </form>
 </body>
