--- a/View/login.html
+++ b/View/login.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../CSS/style.css"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="auth.js"></script>
+
 </head>
 <body>
-    <form method="post" class="form-login">
-        <center>
-            <h2>Test Login</h2>
-            Usuario
-            <input type="text" name="u" placeholder="Pon tu usuario o correo" required><br><br>
-            Contraseña
-            <input type="password" name="c" placeholder="Ingresa tu contraseña" required><br><br>
-            <input type="submit" value="Login"><br>
-            <p><a href="Registro.html">Registrate ahora</a></p> 
-        </center>
-    </form>
+  <form method="post" class="login-form">
+    <center>
+      <h2 class="login-title" style="color: #35c3c1;">Test Login</h2>
+        <div class="flex-row">
+        <label class="lf--label" for="username">
+          <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 0 12 13">
+            <path fill="#B1B7C4" d="M8.9,7.2C9,6.9,9,6.7,9,6.5v-4C9,1.1,7.9,0,6.5,0h-1C4.1,0,3,1.1,3,2.5v4c0,0.2,0,0.4,0.1,0.7 C1.3,7.8,0,9.5,0,11.5V13h12v-1.5C12,9.5,10.7,7.8,8.9,7.2z"/>
+          </svg>
+        </label>
+        <input type="text" name="u" placeholder="Pon tu usuario o correo" required class="lf--input">
+      </div>
+
+      <div class="flex-row">
+        <label class="lf--label" for="password">
+          <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16">
+            <path fill="#B1B7C4" d="M6,2C6,0.9,6.9,0,8,0s2,0.9,2,2v2h2c0.6,0,1,0.4,1,1v9c0,0.6-0.4,1-1,1H5c-0.6,0-1-0.4-1-1V5c0-0.6,0.4-1,1-1h2V2z"/>
+          </svg>
+        </label>
+        <input type="password" name="c" placeholder="Ingresa tu contraseña" required class="lf--input">
+      </div>
+
+      <input type="submit" value="Login" class="lf--submit">
+      <a class="lf--forgot" href="Registro.html">¿Olvidaste tu contraseña?</a>
+    </center>
+  </form>
 </body>
 </html>
