--- a/View/index.html
+++ b/View/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EventConnect</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <script src="auth.js" defer></script>
   <script src="utils.js" defer></script>
 </head>
@@ -12,7 +12,7 @@
   <div class="landing-container">
     <header class="landing-header">
       <h1>🎉 EventConnect</h1>
-      <p>Conectando organizadores de eventos con los mejores proveedores</p>
+      <p>Conectando organizadores de eventos con los mejores</p>
       <div id="welcome-msg"></div>
     </header>
 
