--- a/View/index.html
+++ b/View/index.html
@@ -12,7 +12,7 @@
   <div class="landing-container">
     <header class="landing-header">
       <h1>🎉 EventConnect</h1>
-      <p>Conectando organizadores de eventos con los mejores</p>
+      <p>Conectando organizadores de eventos con los mejores proveedores</p>
       <div id="welcome-msg"></div>
     </header>
 
