--- a/View/Registro.html
+++ b/View/Registro.html
@@ -17,7 +17,11 @@
             Correo
             <input type="email" name="cor" required><br><br>
             Contraseña
-            <input type="password" name="cont" required><br><br>
+            <input type="password" name="cont" id="password" required><br><br>
+            <select name="tipo" required>
+                <option value="cliente">Cliente</option>
+                <option value="proveedor">Proveedor</option>
+            </select><br><br>            
             <input type="submit" value="Registrar">
     </form>
 </body>
