--- a/View/login.html
+++ b/View/login.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <form method="post" class="login-form">
+  <form action="../Controller/iniciosesioncontroller.php" method="post" class="login-form">
     <center>
       <h2 class="login-title" style="color: #35c3c1;">Test Login</h2>
         <div class="flex-row">
@@ -31,7 +31,7 @@
       </div>
 
       <input type="submit" value="Login" class="lf--submit">
-      <a class="lf--forgot" href="Registro.html">¿Olvidaste tu contraseña?</a>
+      <a class="lf--forgot" href="Registro.html">Registrarse ahora</a>
     </center>
   </form>
 </body>
