--- a/View/login.html
+++ b/View/login.html
@@ -11,7 +11,7 @@
 <body>
   <form action="../Controller/IniciosesionCtrl.php" method="post" class="login-form">
     <center>
-      <h2 class="login-title" style="color: #35c3c1;">Test Login</h2>
+      <h2 class="login-title" style="color: #35c3c1;">Iniciar Sesion</h2>
         <div class="flex-row">
         <label class="lf--label" for="username">
           <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 0 12 13">
