--- a/View/Registro.html
+++ b/View/Registro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form action="../Controller/RegistroCtrl.php" method="post" class="form-registro">
-            <h2>Test register</h2>
+            <h2>Crear una cuenta nueva</h2>
             Nombre
             <input type="text" name="ur" required><br><br>
             Apellido
