--- a/View/index.html
+++ b/View/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EventConnect</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../CSS/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   <script src="auth.js" defer></script>
   <script src="utils.js" defer></script>
@@ -12,16 +12,16 @@
 <body>
   
   <header class="navbar">
-    <div class="logo">🎉 EventConnect</div>
+    <div class="logo">EventConnect</div>
     <input type="text" class="search-bar" placeholder="Buscar eventos" />
     
     <nav class="nav-links">
-      <a href="#">Crear eventos</a>
+      <a href="subireventos.html">Crear eventos</a>
       <a href="#">Centro de ayuda</a>
       <a href="#">Mis entradas</a>
       <a href="edit-profile.html">Editar perfil</a> 
       <a href="login.html">Iniciar sesión</a>
-      <a href="register.html">Registrarse</a>
+      <a href="Registro.html">Registrarse</a>
     </nav>
   </header>
 
