--- a/View/subireventos.html
+++ b/View/subireventos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <form action="../Controller/PublicarEventoCtrl.php" method="post" enctype="multipart/form-data" class="form-publicar-evento">
+    <form action="" method="post" class="form-publicar-evento">
         <h2>Publicar Nuevo Evento</h2>
 
         Título del evento:<br>
