--- a/View/index.html
+++ b/View/index.html
@@ -16,10 +16,10 @@
     <input type="text" class="search-bar" placeholder="Buscar eventos" />
     
     <nav class="nav-links">
-      <a href="subireventos.html">Crear eventos</a>
+      <a href="subireventos.html" id="crear-evento">Crear eventos</a>
       <a href="#">Centro de ayuda</a>
       <a href="#">Mis entradas</a>
-      <a href="edit-profile.html">Editar perfil</a> 
+      <a href="#">Editar perfil</a> 
       <a href="login.html">Iniciar sesión</a>
       <a href="Registro.html">Registrarse</a>
     </nav>
