--- a/CSS/style.css
+++ b/CSS/style.css
@@ -442,3 +442,14 @@ body {
 .hidden {
   display: none;
 }
+
+#map {
+    height: 250px; /* puedes ajustar a 200 o 180 si quieres menos */
+    width: 90%; /* más estrecho que el 100% */
+    max-width: 600px; /* límite de anchura en pantallas grandes */
+    margin: 10px auto; /* centrado */
+    display: none;
+    border: 1px solid #000;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+}
