--- a/View/Proveedores/publicareventos.html
+++ b/View/Proveedores/publicareventos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <form action="../Controller/EventoCtrl.php" method="post" class="form-publicar-evento">
+    <form action="../../Controller/Eventos/EventoCtrl.php" method="post" class="form-publicar-evento" enctype="multipart/form-data">
         <h2>Publicar Nuevo Evento</h2>
         Título del evento:<br>
         <input type="text" name="titulo" id="titulo" required><br><br>
