--- a/View/login.html
+++ b/View/login.html
@@ -18,7 +18,7 @@
     <input type="submit" value="Iniciar Sesión" />
 
     <div style="text-align: center; margin-top: 1em;">
-      <a href="registro.html" style="color: #35c3c1; text-decoration: none;">¿No tienes cuenta? Regístrate</a>
+      <a href="registro.html" style="color: #000000; text-decoration: none;">¿No tienes cuenta? Regístrate</a>
     </div>
   </form>
 </body>
