--- a/View/Registro.html
+++ b/View/Registro.html
@@ -17,6 +17,8 @@
 
     <input type="email" name="cor" placeholder="Correo electrónico" required />
 
+    <input type="tel" name="tel" placeholder="Telefono" required />
+
     <input type="password" name="cont" placeholder="Contraseña" id="password" required />
 
     <select name="tipo" required>
